--- a/docs/professor/elias_franco.mdx
+++ b/docs/professor/elias_franco.mdx
@@ -15,7 +15,8 @@ const data = {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -27,7 +28,8 @@ const data = {
           subject: "Sistemas Agroflorestais",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Leiliane Cristine de Souza"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -39,7 +41,8 @@ const data = {
           subject: "Sociologia e extensão rural",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -56,7 +59,8 @@ const data = {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -68,7 +72,21 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Construções e Instalações Rurais",
+          size: 2,
+          teachers: [
+            "Elias Franco",
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "08:20 - 09:10"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -77,25 +95,14 @@ const data = {
           subject: "Agricultura geral",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Sônia Maria Mandotti"
           ],
           classroom: "Sala 6-2",
           students: [
             "AGO2023"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Construções e Instalações Rurais",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
         }
       ]
     }
