--- a/docs/professor/felipe_augusto_gorla.mdx
+++ b/docs/professor/felipe_augusto_gorla.mdx
@@ -8,30 +8,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Química 4",
-          size: 2,
-          teachers: [
-            "Felipe Augusto Gorla"
-          ],
-          classroom: "Laboratório de Química",
-          students: [
-            "EIN2020"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Química II",
-          size: 2,
-          teachers: [
-            "Felipe Augusto Gorla"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "IIW2022A"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Química Orgânica e Bioquímica dos Alimentos",
           size: 4,
           teachers: [
@@ -78,6 +54,18 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
+          subject: "Química 4",
+          size: 2,
+          teachers: [
+            "Felipe Augusto Gorla"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2020"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Química II",
           size: 2,
           teachers: [
@@ -87,13 +75,26 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Felipe Augusto Gorla"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "IIW2022A"
+          ],
+          time: "15:05 - 15:55"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
