--- a/docs/professor/luis_henrique_manosso_von_mecheln.mdx
+++ b/docs/professor/luis_henrique_manosso_von_mecheln.mdx
@@ -23,7 +23,20 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Luis Henrique Manosso Von Mecheln"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -43,18 +56,6 @@ const data = {
             "IIW2021"
           ],
           time: "14:00 - 14:50"
-        },
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Luis Henrique Manosso Von Mecheln"
-          ],
-          classroom: "Sala 8",
-          students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05"
         }
       ]
     },
