--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -29,7 +29,7 @@ const data = {
           students: [
             "AGO2021"
           ],
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Orientação de estágio supervisionado",
@@ -42,12 +42,7 @@ const data = {
             "AGO2021"
           ],
           time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
+        },
         {
           subject: "Topografia e Geoprocessamento",
           size: 2,
@@ -58,9 +53,13 @@ const data = {
           students: [
             "AGR2023"
           ],
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -69,6 +68,19 @@ const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Construções e Instalações Rurais",
+          size: 2,
+          teachers: [
+            "Elias Franco",
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "08:20 - 09:10"
+        },
         {
           subject: "Desenho técnico e topografia",
           size: 2,
