--- a/docs/professor/pedro_leites_junior.mdx
+++ b/docs/professor/pedro_leites_junior.mdx
@@ -13,6 +13,18 @@ const data = {
           teachers: [
             "Pedro Leites Junior"
           ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
           classroom: "Sala 6-2",
           students: [
             "AGO2023"
@@ -32,18 +44,6 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "15:05 - 15:55"
-        },
-        {
           subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
@@ -61,14 +61,26 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Sala 9-2",
           students: [
-            "AGO2022"
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
           ],
           time: "07:30 - 08:20"
         }
