--- a/docs/professor/renato_lada_guerreiro.mdx
+++ b/docs/professor/renato_lada_guerreiro.mdx
@@ -23,20 +23,7 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia II",
-          size: 2,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2021"
-          ],
-          time: "10:15 - 11:05"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -52,6 +39,18 @@ const data = {
             "IIW2022A"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Geografia II",
+          size: 2,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
