--- a/docs/professor/sonia_maria_mandotti.mdx
+++ b/docs/professor/sonia_maria_mandotti.mdx
@@ -84,7 +84,21 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Agricultura geral",
+          size: 2,
+          teachers: [
+            "Elias Franco",
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
+        }
+      ]
     }
   ],
   time: [
