--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -9,20 +9,7 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2023A"
-          ],
-          time: "08:20 - 09:10"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -37,7 +24,7 @@ const data = {
           students: [
             "IIW2022A"
           ],
-          time: "13:10 - 14:00"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Projeto Integrador II",
@@ -61,7 +48,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "10:15 - 11:05"
+          time: "13:10 - 14:00"
         },
         {
           subject: "Trabalho de conclusão de curso I",
@@ -74,6 +61,18 @@ const data = {
             "BIO_ESPECIAL_ESTÁGIO"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10"
         },
         {
           subject: "Estágio curricular supervisionado 1421/496/2039",
@@ -157,6 +156,18 @@ const data = {
             "IIW2022A"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Informática instrumental e aplicada",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "AGO2023 - Grupo B"
+          ],
+          time: "13:10 - 14:00"
         }
       ]
     },
