--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -23,18 +23,6 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Projeto Integrador III",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "IIW2021"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Metodologia de Pesquisa Científica",
           size: 1,
           teachers: [
@@ -57,6 +45,18 @@ const data = {
             "TADS_ESP"
           ],
           time: "21:50 - 22:40"
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
         },
         {
           subject: "Serviços em nuvem",
@@ -86,6 +86,18 @@ const data = {
             "TADS_ESP"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -103,18 +115,6 @@ const data = {
             "TADS_ESP"
           ],
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "IIW2021"
-          ],
-          time: "10:15 - 11:05"
         },
         {
           subject: "Serviços em nuvem",
@@ -156,24 +156,24 @@ const data = {
             "TGC2022"
           ],
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB",
-          size: 2,
-          teachers: [
-            "Samuel Stephan Milczuk"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "IIW2021"
-          ],
-          time: "07:30 - 08:20"
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Comércio Eletrônico e Mídias Digitais (PPC 2019)",
           size: 2,
@@ -187,7 +187,7 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 2,
           teachers: [
             "Samuel Stephan Milczuk"
@@ -196,7 +196,7 @@ const data = {
           students: [
             "IIW2021"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         }
       ]
     }
