--- a/docs/sala/bloco_1/laboratorio_de_quimica.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_quimica.mdx
@@ -9,20 +9,7 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Química 4",
-          size: 2,
-          teachers: [
-            "Felipe Augusto Gorla"
-          ],
-          classroom: "Laboratório de Química",
-          students: [
-            "EIN2020"
-          ],
-          time: "07:30 - 08:20"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -55,6 +42,18 @@ const data = {
             "EIN2021"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Química 4",
+          size: 2,
+          teachers: [
+            "Felipe Augusto Gorla"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2020"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
