--- a/docs/sala/bloco_2/sala_11-2.mdx
+++ b/docs/sala/bloco_2/sala_11-2.mdx
@@ -12,7 +12,7 @@ const data = {
       dayClasses: [
         {
           subject: "Filosofia II",
-          size: 1,
+          size: 2,
           teachers: [
             "Fabio Antônio da Silva"
           ],
@@ -20,31 +20,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Geografia II",
-          size: 2,
-          teachers: [
-            "Josiane Oliveira Medeiros Fuhr"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "15:05 - 15:55"
         },
         {
           subject: "Artes II",
@@ -56,7 +32,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "13:10 - 14:00"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Culturas I",
@@ -69,6 +45,18 @@ const data = {
             "AGO2022"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia Rural",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -91,7 +79,8 @@ const data = {
           subject: "Sistemas Agroflorestais",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Leiliane Cristine de Souza"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -100,28 +89,16 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Filosofia II",
-          size: 1,
+          subject: "Geografia II",
+          size: 2,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Josiane Oliveira Medeiros Fuhr"
           ],
           classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
         },
         {
           subject: "Artes II",
@@ -133,19 +110,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária",
-          size: 2,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "13:10 - 14:00"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -162,7 +127,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         },
         {
           subject: "História I",
@@ -175,24 +140,25 @@ const data = {
             "AGO2022"
           ],
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Sociologia Rural",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "08:20 - 09:10"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Construções e Instalações Rurais",
+          size: 2,
+          teachers: [
+            "Elias Franco",
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "08:20 - 09:10"
+        },
         {
           subject: "Produção Animal I",
           size: 2,
@@ -204,6 +170,30 @@ const data = {
             "AGO2022"
           ],
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "10:15 - 11:05"
         },
         {
           subject: "História I",
@@ -223,18 +213,6 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Construções e Instalações Rurais",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Produção Animal I",
           size: 1,
           teachers: [
@@ -245,6 +223,18 @@ const data = {
             "AGO2022"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     }
