--- a/docs/sala/bloco_2/sala_14-2.mdx
+++ b/docs/sala/bloco_2/sala_14-2.mdx
@@ -11,18 +11,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Gestão e Empreendedorismo Rural",
-          size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "AGO2021"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Irrigação e Drenagem",
           size: 2,
           teachers: [
@@ -44,7 +32,7 @@ const data = {
           students: [
             "AGO2021"
           ],
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Língua Portuguesa e Literatura III",
@@ -69,6 +57,18 @@ const data = {
             "AGR2022"
           ],
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Horticultura",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "AGO2021"
+          ],
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -79,7 +79,8 @@ const data = {
           subject: "Sociologia e extensão rural",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -100,10 +101,10 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Biologia III",
+          subject: "Gestão e Empreendedorismo Rural",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
+            "Joaquim José Honório de Lima"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -218,6 +219,18 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "AGO2021"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Sanidade Animal",
           size: 2,
           teachers: [
@@ -252,18 +265,6 @@ const data = {
             "AGO2021"
           ],
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Horticultura",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "AGO2021"
-          ],
-          time: "10:15 - 11:05"
         }
       ]
     },
