--- a/docs/sala/bloco_2/sala_15-2.mdx
+++ b/docs/sala/bloco_2/sala_15-2.mdx
@@ -59,10 +59,10 @@ const data = {
           time: "08:20 - 09:10"
         },
         {
-          subject: "Piscicultura e Apicultura",
+          subject: "Topografia e Geoprocessamento",
           size: 2,
           teachers: [
-            "Roberto Haruyoshi Ito"
+            "Octavio Henrique Viana"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -91,7 +91,8 @@ const data = {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -112,10 +113,10 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Topografia e Geoprocessamento",
+          subject: "Piscicultura e Apicultura",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -144,7 +145,8 @@ const data = {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -175,6 +177,18 @@ const data = {
             "EIN2021"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Biologia 3",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "EIN2021"
+          ],
+          time: "10:15 - 11:05"
         },
         {
           subject: "Metodologia Científica e Técnicas de Apresentação de Trabalhos",
@@ -222,18 +236,6 @@ const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Biologia 3",
-          size: 2,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "EIN2021"
-          ],
-          time: "10:15 - 11:05"
-        },
         {
           subject: "Forragicultura e Pastagens",
           size: 2,
