--- a/docs/sala/bloco_2/sala_6-2.mdx
+++ b/docs/sala/bloco_2/sala_6-2.mdx
@@ -11,18 +11,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Língua estrangeira - Inglês",
-          size: 2,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Gestão da Produção",
           size: 2,
           teachers: [
@@ -69,12 +57,36 @@ const data = {
             "AGO2023"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Agroecologia e DRS",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Língua estrangeira - Inglês",
+          size: 2,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Matemática I",
           size: 2,
@@ -215,18 +227,6 @@ const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Agroecologia e DRS",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
           time: "08:20 - 09:10"
         }
       ]
@@ -238,7 +238,8 @@ const data = {
           subject: "Agricultura geral",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Sônia Maria Mandotti"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -256,7 +257,7 @@ const data = {
           students: [
             "AGO2023"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Acionamentos Elétricos (PPC2020)",
