--- a/docs/turma/ago/ago2022.mdx
+++ b/docs/turma/ago/ago2022.mdx
@@ -12,7 +12,7 @@ const data = {
       dayClasses: [
         {
           subject: "Filosofia II",
-          size: 1,
+          size: 2,
           teachers: [
             "Fabio Antônio da Silva"
           ],
@@ -20,31 +20,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Geografia II",
-          size: 2,
-          teachers: [
-            "Josiane Oliveira Medeiros Fuhr"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "15:05 - 15:55"
         },
         {
           subject: "Artes II",
@@ -56,7 +32,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "13:10 - 14:00"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Culturas I",
@@ -69,6 +45,18 @@ const data = {
             "AGO2022"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia Rural",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -91,7 +79,8 @@ const data = {
           subject: "Sistemas Agroflorestais",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Leiliane Cristine de Souza"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -100,28 +89,28 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Filosofia II",
-          size: 1,
+          subject: "Geografia II",
+          size: 2,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Josiane Oliveira Medeiros Fuhr"
           ],
           classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Biologia II",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Laboratório de Biologia",
           students: [
             "AGO2022"
           ],
           time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
         },
         {
           subject: "Artes II",
@@ -133,19 +122,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária",
-          size: 2,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "13:10 - 14:00"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -162,6 +139,18 @@ const data = {
           students: [
             "AGO2022"
           ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Física II",
+          size: 2,
+          teachers: [
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "AGO2022"
+          ],
           time: "10:15 - 11:05"
         },
         {
@@ -175,18 +164,6 @@ const data = {
             "AGO2022"
           ],
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Sociologia Rural",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "08:20 - 09:10"
         }
       ]
     },
@@ -194,12 +171,13 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Biologia II",
+          subject: "Construções e Instalações Rurais",
           size: 2,
           teachers: [
-            "Karina Dias Espartosa"
+            "Elias Franco",
+            "Octavio Henrique Viana"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
@@ -218,12 +196,24 @@ const data = {
           time: "13:10 - 14:00"
         },
         {
-          subject: "Física II",
+          subject: "Língua Portuguesa e Literatura II",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Meteorologia e Bioclimatologia na Agropecuária",
           size: 2,
           teachers: [
-            "Polyanna Guimarães e Miranda"
+            "Roberto Haruyoshi Ito"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
@@ -259,18 +249,6 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Construções e Instalações Rurais",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Produção Animal I",
           size: 1,
           teachers: [
@@ -281,6 +259,18 @@ const data = {
             "AGO2022"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     }
