--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -11,18 +11,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Língua estrangeira - Inglês",
-          size: 2,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
@@ -45,12 +33,36 @@ const data = {
             "AGO2023"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Agroecologia e DRS",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Língua estrangeira - Inglês",
+          size: 2,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Matemática I",
           size: 2,
@@ -86,18 +98,6 @@ const data = {
             "AGO2023"
           ],
           time: "08:20 - 09:10"
-        },
-        {
-          subject: "Física I",
-          size: 2,
-          teachers: [
-            "Polyanna Guimarães e Miranda"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05"
         },
         {
           subject: "Educação postural e Segurança no trabalho",
@@ -194,6 +194,18 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
+          subject: "Física I",
+          size: 2,
+          teachers: [
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Zootecnia Geral",
           size: 2,
           teachers: [
@@ -203,7 +215,7 @@ const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Informática instrumental e aplicada",
@@ -223,23 +235,11 @@ const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Informatica A",
           students: [
             "AGO2023 - Grupo B"
           ],
           time: "13:10 - 14:00"
-        },
-        {
-          subject: "Agroecologia e DRS",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "08:20 - 09:10"
         }
       ]
     },
@@ -256,13 +256,14 @@ const data = {
           students: [
             "AGO2023"
           ],
-          time: "08:20 - 09:10"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Agricultura geral",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Sônia Maria Mandotti"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -280,7 +281,7 @@ const data = {
           students: [
             "AGO2023"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Química I",
