--- a/docs/turma/agr/agr2023.mdx
+++ b/docs/turma/agr/agr2023.mdx
@@ -11,10 +11,10 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Piscicultura e Apicultura",
+          subject: "Topografia e Geoprocessamento",
           size: 2,
           teachers: [
-            "Roberto Haruyoshi Ito"
+            "Octavio Henrique Viana"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -43,7 +43,8 @@ const data = {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -52,10 +53,10 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Topografia e Geoprocessamento",
+          subject: "Piscicultura e Apicultura",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -72,7 +73,8 @@ const data = {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 15-2",
           students: [
