--- a/docs/turma/iiw/iiw2021.mdx
+++ b/docs/turma/iiw/iiw2021.mdx
@@ -11,16 +11,28 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador III",
+          subject: "Biologia III",
           size: 2,
           teachers: [
-            "Eduardo Alberto Felippsen"
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2021"
+          ],
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Serviços em nuvem",
@@ -33,18 +45,6 @@ const data = {
             "IIW2021"
           ],
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática III",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2021"
-          ],
-          time: "10:15 - 11:05"
         }
       ]
     },
@@ -61,25 +61,25 @@ const data = {
           students: [
             "IIW2021"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Biologia III",
+          subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Gabriele Antico Freiria"
+            "Pedro Leites Junior"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2021"
           ],
-          time: "08:20 - 09:10"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Geografia II",
+          subject: "Matemática III",
           size: 2,
           teachers: [
-            "Renato Lada Guerreiro"
+            "Sérgio Augusto Dias Castro"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -93,18 +93,6 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "IIW2021"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Física III",
           size: 2,
           teachers: [
@@ -115,6 +103,18 @@ const data = {
             "IIW2021"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Geografia II",
+          size: 2,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
         },
         {
           subject: "Serviços em nuvem",
@@ -170,6 +170,18 @@ const data = {
           time: "13:10 - 14:00"
         },
         {
+          subject: "Química III",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2021"
+          ],
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Desenvolvimento Responsivo e Otimização de Sites",
           size: 2,
           teachers: [
@@ -180,24 +192,24 @@ const data = {
             "IIW2021"
           ],
           time: "14:00 - 14:50"
-        },
-        {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB",
-          size: 2,
-          teachers: [
-            "Samuel Stephan Milczuk"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "IIW2021"
-          ],
-          time: "07:30 - 08:20"
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Filosofia III",
           size: 1,
@@ -211,19 +223,7 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Química III",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2021"
-          ],
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 2,
           teachers: [
             "Samuel Stephan Milczuk"
@@ -232,7 +232,7 @@ const data = {
           students: [
             "IIW2021"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         }
       ]
     }
