--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -11,18 +11,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I",
-          size: 2,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
@@ -35,16 +23,40 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
+          subject: "Filosofia I",
+          size: 1,
           teachers: [
-            "Joaquim José Honório de Lima"
+            "Fabio Antônio da Silva"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 9-2",
           students: [
             "IIW2023A"
           ],
           time: "08:20 - 09:10"
+        },
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -61,7 +73,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "10:15 - 11:05"
+          time: "13:10 - 14:00"
         },
         {
           subject: "Lingua estrangeira - Inglês",
@@ -73,7 +85,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Matemática I",
@@ -88,40 +100,28 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "14:00 - 14:50"
-        },
-        {
-          subject: "Biologia I",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 9-2",
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -206,10 +206,10 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "Michelli Cristina Galli"
+            "Kathia Regina Kunzler Bechlin"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -235,6 +235,18 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Educação Física I",
+          size: 2,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
           subject: "Sociologia I",
           size: 1,
           teachers: [
@@ -244,31 +256,19 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Química I",
+          subject: "Biologia I",
           size: 2,
           teachers: [
-            "Kathia Regina Kunzler Bechlin"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 9-2",
           students: [
             "IIW2023A"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20"
         }
       ]
     }
