--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -20,16 +20,16 @@ const data = {
           time: "14:00 - 14:50"
         },
         {
-          subject: "Projeto Integrador III",
+          subject: "Projeto Integrador II",
           size: 2,
           teachers: [
             "Eduardo Alberto Felippsen"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Sala 6",
           students: [
-            "IIW2021"
+            "IIW2022B"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -67,24 +67,25 @@ const data = {
             "FPW2023"
           ],
           time: "14:00 - 14:50"
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Sala 6",
-          students: [
-            "IIW2022B"
-          ],
-          time: "07:30 - 08:20"
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
+        }
+      ]
     }
   ],
   time: [
