--- a/docs/professor/leiliane_cristine_de_souza.mdx
+++ b/docs/professor/leiliane_cristine_de_souza.mdx
@@ -12,6 +12,19 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Sistemas Agroflorestais",
+          size: 2,
+          teachers: [
+            "Elias Franco",
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Produção Animal II",
           size: 1,
           teachers: [
