--- a/docs/professor/michelli_cristina_galli.mdx
+++ b/docs/professor/michelli_cristina_galli.mdx
@@ -14,36 +14,11 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "IIW2021"
-          ],
-          time: "10:15 - 11:05"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05"
-        },
         {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
@@ -55,6 +30,18 @@ const data = {
             "IIW2022A"
           ],
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -74,18 +61,6 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
@@ -96,6 +71,18 @@ const data = {
             "IIW2022A"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     }
