--- a/docs/professor/roberto_haruyoshi_ito.mdx
+++ b/docs/professor/roberto_haruyoshi_ito.mdx
@@ -6,35 +6,23 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Piscicultura e Apicultura",
-          size: 2,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "AGR2023"
-          ],
-          time: "21:00 - 21:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          subject: "Sociologia e extensão rural",
           size: 2,
           teachers: [
+            "Elias Franco",
             "Roberto Haruyoshi Ito"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Sala 14-2",
           students: [
-            "AGO2022"
+            "AGO2021"
           ],
-          time: "13:10 - 14:00"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Ovinocaprinocultura",
@@ -47,6 +35,18 @@ const data = {
             "AGR2022"
           ],
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Piscicultura e Apicultura",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "AGR2023"
+          ],
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -70,6 +70,18 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
+          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Piscicultura e Apicultura",
           size: 2,
           teachers: [
@@ -91,7 +103,7 @@ const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         }
       ]
     },
