--- a/docs/professor/samuel_stephan_milczuk.mdx
+++ b/docs/professor/samuel_stephan_milczuk.mdx
@@ -8,6 +8,30 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "PCCC 1 - Integração de conteúdos do semestre por meio da informática",
+          size: 3,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "BIO_ESPECIAL_2"
+          ],
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2021"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Serviços em nuvem",
           size: 1,
           teachers: [
@@ -75,12 +99,17 @@ const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Informatica A",
           students: [
             "AGO2023 - Grupo B"
           ],
           time: "13:10 - 14:00"
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 2,
@@ -91,24 +120,7 @@ const data = {
           students: [
             "IIW2021"
           ],
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
-          teachers: [
-            "Samuel Stephan Milczuk"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "IIW2021"
-          ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         }
       ]
     }
