--- a/docs/professor/tatiane_martinazzo_portz.mdx
+++ b/docs/professor/tatiane_martinazzo_portz.mdx
@@ -6,11 +6,61 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Agroecologia e DRS",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Horticultura",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "AGO2021"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Sociologia Rural",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "13:10 - 14:00"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Fertilidade, Manejo e Conservação dos Solos",
+          size: 2,
+          teachers: [
+            "Elias Franco",
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "AGR2023"
+          ],
+          time: "21:00 - 21:50"
+        },
         {
           subject: "Educação postural e Segurança no trabalho",
           size: 1,
@@ -29,47 +79,23 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia Rural",
+          subject: "Fertilidade, Manejo e Conservação dos Solos",
           size: 2,
           teachers: [
+            "Elias Franco",
             "Tatiane Martinazzo Portz"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Sala 15-2",
           students: [
-            "AGO2022"
+            "AGR2023"
           ],
-          time: "08:20 - 09:10"
+          time: "21:00 - 21:50"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Agroecologia e DRS",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Horticultura",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "AGO2021"
-          ],
-          time: "10:15 - 11:05"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
