--- a/docs/turma/ago/ago2021.mdx
+++ b/docs/turma/ago/ago2021.mdx
@@ -11,18 +11,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Gestão e Empreendedorismo Rural",
-          size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "AGO2021"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Mecanização Agrícola, Irrigação e Drenagem",
           size: 2,
           teachers: [
@@ -32,7 +20,7 @@ const data = {
           students: [
             "AGO2021"
           ],
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Orientação de estágio supervisionado",
@@ -57,6 +45,18 @@ const data = {
             "AGO2021"
           ],
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Horticultura",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "AGO2021"
+          ],
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -67,7 +67,8 @@ const data = {
           subject: "Sociologia e extensão rural",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Elias Franco",
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -88,10 +89,10 @@ const data = {
           time: "13:10 - 14:00"
         },
         {
-          subject: "Biologia III",
+          subject: "Gestão e Empreendedorismo Rural",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
+            "Joaquim José Honório de Lima"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -182,6 +183,18 @@ const data = {
           time: "13:10 - 14:00"
         },
         {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "AGO2021"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Sanidade Animal",
           size: 2,
           teachers: [
@@ -204,18 +217,6 @@ const data = {
             "AGO2021"
           ],
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Horticultura",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "AGO2021"
-          ],
-          time: "10:15 - 11:05"
         }
       ]
     },
